src/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: 'Syne';
  src: url('/fonts/Syne-VariableFont_wght.ttf') format('truetype');
  font-weight: 100 900;
  font-style: normal;
  font-named-instance: 'Syne Bold', 'Syne ExtraBold', 'Syne Medium', 'Syne Regular', 'Syne SemiBold';
}

@font-face {
  font-family: 'Quattrocento Sans';
  src: url('/fonts/QuattrocentoSans-Bold.ttf') format('truetype');
  font-weight: bold;
  font-style: normal;
}

@font-face {
  font-family: 'Quattrocento Sans';
  src: url('/fonts/QuattrocentoSans-BoldItalic.ttf') format('truetype');
  font-weight: bold;
  font-style: italic;
}

@font-face {
  font-family: 'Quattrocento Sans';
  src: url('/fonts/QuattrocentoSans-Italic.ttf') format('truetype');
  font-weight: normal;
  font-style: italic;
}

@font-face {
  font-family: 'Quattrocento Sans';
  src: url('/fonts/QuattrocentoSans-Regular.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

html, body {
  @apply bg-white dark:bg-night scroll-smooth dark:text-white cursor-none;
}

.red-dot {
  position: absolute;
  width: 10px;
  height: 10px;
  border-radius: 50%;
  @apply bg-complementary-400;
  pointer-events: none;
  z-index: 9999;
}

.ripple {
  position: absolute;
  width: 50px;
  height: 50px;
  border-radius: 50%;
  background-color: rgba(255, 0, 0, 0.5);
  transform: scale(0);
  animation: ripple 1s linear infinite;
  z-index: 9998;
}

@keyframes ripple {
  0% {
    transform: scale(0);
  }
  100% {
    transform: scale(5);
    opacity: 0;
  }
}

a, button {
  @apply cursor-none;
}

.halo {
  box-shadow: 0 0 20px red;
  @apply bg-complementary-300;
}

